# MIC5_LAB

./: README.md
workspace/.mcuxpressoide_packages_support/: info.properties
workspace/.metadata/: version.ini
workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
workspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
workspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
workspace/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
workspace/Week1 - Example01/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week1 - Example01/inc/: FreeRTOSConfig.h
workspace/Week1 - Example01/serial/: serial.c
workspace/Week1 - Example01/src/: main.c
workspace/Week1 - Example02/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week1 - Example02/inc/: FreeRTOSConfig.h  freertos_tasks_c_additions.h
workspace/Week1 - Example02/src/: main.c
workspace/Week1 - Lab/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week1 - Lab tsi/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week1 - Lab tsi/inc/: FreeRTOSConfig.h
workspace/Week1 - Lab tsi/src/: main.c
workspace/Week1 - Lab/inc/: FreeRTOSConfig.h
workspace/Week1 - Lab/src/: main.c
workspace/Week2 - Example01/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week2 - Example01/CMSIS/: system_MKL25Z4.c
workspace/Week2 - Example01/inc/: FreeRTOSConfig.h
workspace/Week2 - Example01/src/: main.c
workspace/Week2 - Example02/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week2 - Example02/inc/: FreeRTOSConfig.h
workspace/Week2 - Example02/src/: main.c
workspace/Week3 - Example01/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week3 - Example01/inc/: FreeRTOSConfig.h
workspace/Week3 - Example01/runtime_stats/: runtime_stats.c
workspace/Week3 - Example01/src/: main.c
workspace/Week3 - Example01/startup/: arm_gcc.cmake
workspace/Week3 - Example02/: .cproject  .gitignore  .project  CMakeLists.txt  ozone.jdebug
workspace/Week3 - Example02/inc/: FreeRTOSConfig.h  freertos_tasks_c_additions.h
workspace/Week3 - Example02/src/: main.c
workspace/Week3 - Example03/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week3 - Example03/inc/: FreeRTOSConfig.h
workspace/Week3 - Example03/src/: main.c
workspace/Week3 - Lab/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week3 - Lab/inc/: FreeRTOSConfig.h
workspace/Week3 - Lab/src/: main.c
workspace/Week3 - Lab/switches/: switches.c
workspace/Week4 - Example01/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week4 - Example01/src/: main.c
workspace/Week4 - Example01/timer/: timer.c  timer.h
workspace/Week4 - Lab/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week4 - Lab/inc/: FreeRTOSConfig.h
workspace/Week4 - Lab/rtc/: datetime.h  rtc.c  rtc.h
workspace/Week4 - Lab/src/: main.c
workspace/Week5 - Example01/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week5 - Example01/src/: main.c
workspace/Week5 - Lab/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week5 - Lab/inc/: FreeRTOSConfig.h
workspace/Week5 - Lab/oled/: fonts.c  ssd1306.h
workspace/Week5 - Lab/runtime_stats/: runtime_stats.h
workspace/Week5 - Lab/src/: main.c
workspace/Week6 - Example01/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week6 - Example01/CMSIS/: system_MKL25Z4.c
workspace/Week6 - Example01/serial/: serial.h
workspace/Week6 - Example01/src/: main.c
workspace/Week6 - Example02/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week6 - Example02/src/: main.c
workspace/Week6 - Example03/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week6 - Example03/inc/: FreeRTOSConfig.h
workspace/Week6 - Example03/rgb/: rgb.c
workspace/Week6 - Example03/src/: main.c
workspace/Week6 - Example03/startup/: linker_script.ld
workspace/Week6 - Example03/tcrt5000/: tcrt5000.h
workspace/Week6 - Lab/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week6 - Lab/inc/: FreeRTOSConfig.h
workspace/Week7 - Example01/: .cproject  .project  CMakeLists.txt  FreeMaster.pmpx  ozone.jdebug
workspace/Week7 - Example01/CMSIS/: system_MKL25Z4.c
workspace/Week7 - Example01/inc/: FreeRTOSConfig.h
workspace/Week7 - Example01/leds/: leds.h
workspace/Week7 - Example01/oled/: bitmaps.c  fonts.h  i2c1.h
workspace/Week7 - Example01/rtc/: rtc.c
workspace/Week7 - Example01/runtime_stats/: runtime_stats.c
workspace/Week7 - Example01/src/: main.c
workspace/Week7 - Example01/switches/: switches.h
workspace/Week7 - Example01/tcrt5000/: tcrt5000.c
workspace/Week7 - Example01/timer/: timer.c  timer.h
workspace/Week7 - Example02/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week7 - Example02/inc/: FreeRTOSConfig.h
workspace/Week7 - Example02/mma8451/: i2c0.c  i2c0.h  mma8451.c  mma8451.h
workspace/Week7 - Example02/oled/: bitmaps.h  fonts.c
workspace/Week7 - Example02/rgb/: rgb.h
workspace/Week7 - Example02/serial/: serial.c
workspace/Week7 - Example02/src/: main.c
workspace/Week7 - Example02/tcrt5000/: tcrt5000.c
workspace/Week7 - Example03/: .cproject  .project  CMakeLists.txt  ozone.jdebug
workspace/Week7 - Example03/leds/: leds.c
workspace/Week7 - Example03/mma8451/: mma8451.c
workspace/Week7 - Example03/oled/: bitmaps.c  bitmaps.h  i2c1.c  ssd1306.c
workspace/Week7 - Example03/rgb/: rgb.c
workspace/Week7 - Example03/rtc/: datetime.c  rtc.h
workspace/Week7 - Example03/src/: main.c
